<resources>
    <string name="app_name">BlanBall</string>
    <string name="login">Логін</string>
    <string name="blanball">BlanBall</string>
    <string name="auth_in_system">Авторизація у системі</string>
    <string name="password">Пароль</string>
    <string name="remember_me">Запам’ятати мене</string>
    <string name="sign_in">Увійти</string>
    <string name="dont_have_acc">Ще не маєте акаунту?</string>
    <string name="register">Зареєструватися</string>
    <string name="i_dont_remember">Я не пам’ятаю пароль</string>
    <string name="empty_field_error">* Поле не може бути порожнім</string>
    <string name="max_chars_error_email">* Кількість символів не може бути більшою ніж 255</string>
    <string name="min_chars_error_email">* Кількість символів не може бути меншою ніж 3</string>
    <string name="max_chars_error_pass">* Кількість символів не може бути більшою ніж 68</string>
    <string name="min_chars_error_pass">* Кількість символів не може бути меншою ніж 8</string>
    <string name="format_error_email">* Неправильний формат email</string>
    <string name="invalid_credential_error">* Перевірте правильність введених даних</string>
    <string name="loading">Завантаження…</string>
    <string name="resumption_acces">Відновлення доступу</string>
    <string name="send_email_text">Лист із кодом-підтвердження надійде на вказану адресу, введіть його у відведене поле</string>
    <string name="send_email_text_step_1">Введіть електронну адресу, до якої прив’язано ваш обліковий запис BlanBall і ми відправимо туди код-підтвердження для скидання паролю</string>
    <string name="email">E-mail</string>
    <string name="send_code">Надіслати код</string>
    <string name="reset_pass_button">Скинути пароль</string>
    <string name="cancel">Скасувати</string>
    <string name="dash"> — </string>
    <string name="cancel_changes">Скасувати зміни</string>
    <string name="message_atention">Повідомлення прийде протягом 30 сек</string>
    <string name="create_a_new_password">Придумайте новий надійний пароль.Зміни вступлять у силу одразу після збереження</string>
    <string name="new_pass">Новий пароль</string>
    <string name="repeat_new_pass">Повторіть новий пароль</string>
    <string name="save_new_pass">Зберегти новий пароль</string>
    <string name="new_pass_toast">Пароль було змінено</string>
    <string name="resend_code_timer">Надіслати код повторно: 05 сек</string>
    <string name="doesnt_math_pass">* Введені паролі не збігаються</string>
    <string name="resend">Надіслати код ще раз</string>
    <string name="creation_new_acc">Створення\nоблікового запису</string>
    <string name="your_name">Ваше повне ім\'я</string>
    <string name="your_gender">Ваша стать</string>
    <string name="can_pick_once">Можна обрати лише раз</string>
    <string name="male">Чоловік</string>
    <string name="female">Жінка</string>
    <string name="next">Далі</string>
    <string name="you_phone_number">Ваш номер телефону</string>
    <string name="create_password">Придумайте пароль</string>
    <string name="repeat_password">Повторіть пароль</string>
    <string name="man">Man</string>
    <string name="woman">Woman</string>
    <string name="lost_in_system">Залишатися авторизованим у системі</string>
    <string name="accept_terms">Я приймаю умови</string>
    <string name="privacy_policy"> політики конфіденційності</string>
    <string name="back">Назад</string>
    <string name="optional">Опціонально</string>
    <string name="qualification">Кваліфікація</string>
    <string name="verified">Профіль верифіковано</string>
    <string name="unverified">Профіль не верифіковано</string>
    <string name="invite_to_an_event">Запросити на подію</string>
    <string name="write_email">Написати e-mail</string>
    <string name="to_call">Подзвонити</string>
    <string name="about_youself">Про себе:</string>
    <string name="game_stats">Ігрові характеристики</string>
    <string name="game_position">Ігрова позиція</string>
    <string name="weight">Вага</string>
    <string name="height">Зріст</string>
    <string name="kicking_leg">Ударна нога</string>
    <string name="ratings_and_reviews">Рейтинги та відгуки</string>
    <string name="five_scores">/5.0</string>
    <string name="empty_text_field">----</string>
    <string name="height_meas_units">см</string>
    <string name="weight_meas_units">кг</string>
    <string name="grades">оцінок</string>
    <string name="planned_events">запланованих подій</string>
    <string name="planned_events_1">Запланованих подій</string>
    <string name="show_all_reviews">Показати всі відгуки</string>
    <string name="show_all_planned_events">Показати всі заплановані події</string>
    <string name="have_not_yet_received_reviews">ще не отримував оцінок та коментарів</string>
    <string name="have_not_yet_received_planned_events">ще не додав жодної події до запланованих</string>
    <string name="tournament">Турнір</string>
    <string name="three_dots">...</string>
    <string name="planned_submissions">Заплановані події</string>
    <string name="history_of_participation_in_events">Історія участі у заходах</string>
    <string name="сonfirmed">Підтверджено</string>
    <string name="unсonfirmed">Не підтверджено</string>
    <string name="send_mail_repeat">Надіслати лист повторно:</string>
    <string name="sec">сек</string>
    <string name="check_code">* Перевірте правильність введеного коду підтвердження</string>
    <string name="phone_start_code">+380</string>
    <string name="letter_only_error">* Повинно містити тільки букви</string>
    <string name="phone_format_error">* Невірний формат телефонного номеру </string>
    <string name="your_firstname">Ваше  ім\'я</string>
    <string name="your_lastname">Ваше прізвище</string>
    <string name="lets_meet">Давайте знайомитись!</string>
    <string name="when_were_you_born">Коли ви народилися?</string>
    <string name="turn_back">Повернутися назад</string>
    <string name="day">День</string>
    <string name="month">Місяць</string>
    <string name="year">Рік</string>
    <string name="january">Січень</string>
    <string name="february">Лютий</string>
    <string name="march">Березень</string>
    <string name="april">Квітень</string>
    <string name="may">Травень</string>
    <string name="june">Червень</string>
    <string name="july">Липень</string>
    <string name="august">Серпень</string>
    <string name="september">Вересень</string>
    <string name="october">Жовтень</string>
    <string name="november">Листопад</string>
    <string name="december">Грудень</string>
    <string name="prepare_your_profile">Підготуймо ваш профіль для використання додатку</string>
    <string name="set_up">Налаштувати</string>
    <string name="remind_me_later">Нагадати пізніше</string>
    <string name="your_sports_skills">Ваші спортивні навички</string>
    <string name="tell_us_about_yourself">Розкажіть нам трохи про себе, щоби ми могли підлаштувати ваш профіль для зручної взаємодії з усіма користувачами додатку</string>
    <string name="what_about_your_background">Чудово!\nА як щодо вашого досвіду у футболі?</string>
    <string name="have_you_played_football_before">Ви раніше займалися футболом?</string>
    <string name="didnt_practice">Не займався</string>
    <string name="amateurish">Любительськи</string>
    <string name="professionally">Професійно</string>
    <string name="independently">Самостійно</string>
    <string name="confirm_your_qualifications_with_a_document">Підтвердіть вашу кваліфікацію документом</string>
    <string name="choose_your_playing_position">Оберіть вашу ігрову позицію</string>
    <string name="your_playing_position">Ваша позиція</string>
    <string name="document">Документ</string>
    <string name="impact_leg">Ударна нога</string>
    <string name="physical_parameters">Фізичні параметри</string>
    <string name="sports_characteristics">Спортивні характеристики</string>
    <string name="right_leg">Права</string>
    <string name="right">Right</string>
    <string name="left_leg">Ліва</string>
    <string name="left">Left</string>
    <string name="goalkeeper">Вратарь</string>
    <string name="left_defender">Лівий захисник</string>
    <string name="right_defender">Правий захисник</string>
    <string name="central_defender">Центральний захисник</string>
    <string name="left_flank_defender">Лівий фланговий захисник</string>
    <string name="right_flank_defender">Правий фланговий захисник</string>
    <string name="supporting_mid_defender">Опорний півзахисник</string>
    <string name="left_mid_defender">Лівий півзахисник</string>
    <string name="attacking_mid_defender">Атакуючий півзахисник</string>
    <string name="right_winger">Правий крайній півзахисник</string>
    <string name="left_winger">Лівий крайній  півзахисник</string>
    <string name="right_flank_attacker">Правий фланговий атакуючий</string>
    <string name="left_flank_attacker">Лівий  фланговий атакуючий</string>
    <string name="right_forward">Правий форвард</string>
    <string name="central_forward">Центральний форвард</string>
    <string name="left_forward">Лівий форвард</string>
    <string name="forward_striker">Форвард страйкер</string>
    <string name="gender">Стать</string>
    <string name="all">Всі</string>
    <string name="age_range">Віковий діапазон</string>
    <string name="gk">GK</string>
    <string name="lb">LB</string>
    <string name="rb">RB</string>
    <string name="cb">CB</string>
    <string name="lwb">LWB</string>
    <string name="rwb">RWB</string>
    <string name="cdm">CDM</string>
    <string name="cm">CM</string>
    <string name="cam">CAM</string>
    <string name="rm">RM</string>
    <string name="lm">LM</string>
    <string name="rw">RW</string>
    <string name="lw">LW</string>
    <string name="rf">RF</string>
    <string name="cf">CF</string>
    <string name="lf">LF</string>
    <string name="st">ST</string>
    <string name="any_position">Будь яка</string>
    <string name="city">Місто</string>
    <string name="city_village_town">Місто/Cело/Містечко</string>
    <string name="address">Адреса</string>
    <string name="your_place_of_residence">Ваш населений пункт</string>
    <string name="help_us_figure_out">Допоможіть нам з’ясувати які райони будуть зручними для вас для участі в оффлайн заходах. Надалі ці локації будуть пріорітетними у пропозиціях.</string>
    <string name="locations">Локації</string>
    <string name="finish">Завершити</string>
    <string name="region">Область</string>
    <string name="vinnytska_region">Вінницька область</string>
    <string name="volynska_region">Волинська область</string>
    <string name="dnipropetrovska_region">Дніпропетровська область</string>
    <string name="donetska_region">Донецька область</string>
    <string name="zhytomyrska_region">Житомирська область</string>
    <string name="zakarpatska_region">Закарпатська область</string>
    <string name="zaporizka_region">Запорізька область</string>
    <string name="ivano_frankivska_region">Івано-Франківська область</string>
    <string name="kievska_region">Київська область</string>
    <string name="kirovogradska_region">Кіровоградська область</string>
    <string name="luhanska_region">Луганська область</string>
    <string name="lvivska_region">Львівська область</string>
    <string name="mykolaivska_region">Миколаївська область</string>
    <string name="odeska_region">Одеська область</string>
    <string name="poltavska_region">Полтавська область</string>
    <string name="rivnenska_region">Рівненська область</string>
    <string name="sumska_region">Сумська область</string>
    <string name="ternopilska_region">Тернопільська область</string>
    <string name="kharkivska_region">Харківська область</string>
    <string name="khersonska_region">Херсонська область</string>
    <string name="khmelnytska_region">Хмельницька область</string>
    <string name="cherkaska_region">Черкаська область</string>
</resources>