<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_reset">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ukraine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/main_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="120dp"
        android:background="@drawable/top_background"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/auth_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="28dp"
            android:gravity="start"
            android:text="@string/resumption_acces"
            android:textAppearance="@style/auth_in_system" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="24dp"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:src="@drawable/stepline_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:src="@drawable/stepline_1" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="4dp"
                android:layout_marginStart="2dp"
                android:layout_marginEnd="2dp"
                android:layout_weight="1"
                android:src="@drawable/stepline_1" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="start"
            android:layout_marginStart="16dp"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="16dp"
            android:textSize="14dp"
            android:fontFamily="@font/exo"
            android:text="@string/create_a_new_password"
            android:textColor="#575775" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:hint="@string/new_pass"
            android:textColorHint="#262541"
            android:textSize="13sp"
            app:boxBackgroundMode="outline"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="#262541"
            app:passwordToggleDrawable="@drawable/ic_eye_selector"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_placeholder_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/background_placeholder"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:textColor="#262541"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/repeat_password_placeholder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="6dp"
            android:layout_marginEnd="16dp"
            android:fontFamily="@font/inter"
            android:hint="@string/repeat_new_pass"
            android:textColorHint="#262541"
            android:textSize="13sp"
            app:boxBackgroundMode="outline"
            app:boxStrokeErrorColor="@color/red"
            app:endIconMode="password_toggle"
            app:errorEnabled="true"
            app:errorTextColor="@color/red"
            app:hintTextColor="#262541"
            app:passwordToggleDrawable="@drawable/ic_eye_selector"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/repeat_password_placeholder_edit"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_gravity="center"
                android:background="@drawable/background_placeholder"
                android:inputType="textPassword"
                android:paddingStart="12dp"
                android:paddingTop="8dp"
                android:paddingEnd="0dp"
                android:paddingBottom="8dp"
                android:textColor="#262541"
                android:textSize="13sp" />
        </com.google.android.material.textfield.TextInputLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="45dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/cancel_button"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/trans"
            android:fontFamily="@font/inter"
            android:text="@string/cancel_changes"
            android:textAllCaps="false"
            android:textColor="#575775" />

        <Button
            android:id="@+id/save_btn"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/background_button"
            android:fontFamily="@font/inter"
            android:text="@string/save_new_pass"
            android:textAllCaps="false" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>